# me-tchain-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cv_timu-2.txt  docker-compose.yml
.husky/: pre-commit
backend/: .env.example  Dockerfile  IMPROVEMENTS_IMPLEMENTED.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  contact.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  resilience.py  websocket.py
backend/app/models/schemas/: __init__.py  chat.py  contact.py
backend/app/services/chatbot/: __init__.py  agent.py  memory.py  memory_factory.py  object_persona_loader.py  persona.py  persona_classifier.py  persona_router.py  prompts.py  redis_memory.py
backend/app/services/llm/: __init__.py  base.py  client.py  deepseek.py  factory.py
backend/data/: persona.md
backend/data/objects/: edu_trakya_bsc.md  project_apa_citation.md  thesis_msc_llm.md
backend/data/personas/: educator.md  engineer.md  researcher.md  speaker.md
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_memory.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CAREER_GAME_PLAN.md  DEPLOYMENT.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+73 files in other folders)
